kubernetes/home.vijayakumar.xyz/authentik/postgres-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: authentik
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.2.10
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    cnpg.io/cluster: prod-pg-cluster
    role: primary
